[package]
name = "py-checked-exceptions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
ruff_db = { path = "ruff/crates/ruff_db", features = ["os"]}
ruff_python_ast = { path = "ruff/crates/ruff_python_ast", features = ["get-size"]}
ruff_text_size = { path = "ruff/crates/ruff_text_size" }
ruff_source_file = { path = "ruff/crates/ruff_source_file" }
ruff_memory_usage = { path = "ruff/crates/ruff_memory_usage" }
ty_ide = { path = "ruff/crates/ty_ide" }
ty_project = { path = "ruff/crates/ty_project" }
ty_python_semantic = { path = "ruff/crates/ty_python_semantic" }
once_cell = "1.21.3"
indicatif = "0.18.0"
tracing = "0.1.41"
rayon = "1.10.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
camino = "1.1.11"
clap = { version = "4.5.43", features = ["derive", "env"] }
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "918d35d873b2b73a0237536144ef4d22e8d57f27", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
get-size2 = { version = "0.6.2", features = [
    "derive",
    "smallvec",
    "hashbrown",
    "compact-str",
] }
