[package]
name = "py-checked-exceptions"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A static analyzer that enforces exception documentation in Python code"
homepage = "https://github.com/cstruct/py-checked-exceptions"
repository = "https://github.com/cstruct/py-checked-exceptions"
readme = "README.md"
keywords = ["python", "static-analysis"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
ruff_db = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8", features = ["os"]}
ruff_linter = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ruff_python_ast = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ruff_text_size = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ruff_source_file = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ruff_memory_usage = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ty_ide = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ty_project = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
ty_python_semantic = { git = "https://github.com/cstruct/ruff.git", rev = "9d081b0df6bb1d514252ca91d037cfca1ee061a8" }
once_cell = "1.21.3"
indicatif = "0.18.0"
tracing = "0.1.41"
rayon = "1.10.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
camino = "1.1.11"
clap = { version = "4.5.43", features = ["derive", "env"] }
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "918d35d873b2b73a0237536144ef4d22e8d57f27", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
get-size2 = { version = "0.6.2", features = [
    "derive",
    "smallvec",
    "hashbrown",
    "compact-str",
] }
